--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -85,18 +85,38 @@ Figure 2 shows two lego plots, one for a QCD event and one for a QED event. Thes
 %
 \trento\ allows users to input several physical options in order to create realistic heavy ion collision backgrounds. These options include two projectiles, number of events, reduced-thickness, fluctuation, nucleon-width, cross-section, and a normalization factor. For each data set,  we used non-deformed gold (Au) nuclei with 197 nucleons each. We produced 100,000 events for several different cross-sections. All other physical options were left to their default settings: reduced-thickness = 0, fluctuation = 1, nucleon-width = 0.5 fm, and normalization = 1. Different cross-sections correspond to different beam $E_{CM}$ per nucleon pair. The cross-sections (in units of fm$^2$) that we used to simulate the different beam energies are as follows: 4.23 for 200 GeV, 3.96 for 130 GeV, 3.60 for 62.4 GeV, 3.43 for 39 GeV, 3.32 for 27 GeV, 3.25 for 19.6 GeV, 3.20 for 15.0 GeV, and 3.12 for 7.7 GeV. \trento\ reads in the options and produces a text file listing several event properties for each event: event number, impact parameter, number of participants, initial entropy, and properties of flow. The produced \trento\ text files were then imported into our programs as an array of event data.
 
-To use the \trento\ data as we intended we had to produce accurate Au-Au multiplicities for the various beam energies. To do this we fit the \trento\ data to PHENIX data. We created a histogram for the number of participants in each \trento\ event and weighted the bins by the initial entropy. We then scaled the \trento\ data at each energy by a constant to fit it to the PHENIX data of charged multiplicity vs. number of participants. Using the constants from the fit at each energy allowed us to create multiplicity values from the initial entropy values. The constant for the 200 GeV data was 4.65905256.
+\begin{center}
+\begin{table}
+\caption{my table}
+\begin{tabular}{|c|l|}
+\hline
+$E_{CM}$ & $\sigma_{nn}$(fm$^2$) \\
+\hline
+\end{tabular}
+\label{}
+\end{table}
+\end{center}
+
+To use the \trento\ data as we intended we had to produce accurate Au-Au multiplicities for the various beam energies. To do this we fit the \trento\ data to PHENIX data. We created a histogram for the number of participants in each \trento\ event and weighted the bins by the initial entropy. We then scaled the \trento\ data at each energy by a constant to fit it to the PHENIX data of charged multiplicity vs. number of participants. The fit and the produced plot is shown in figure 3. The \trento\ data points are the open shapes that are connected by lines. Using the constants from the fit at each energy allowed us to create multiplicity values from the initial entropy values. The constant for the 200 GeV data was 4.65905256.
 
 Using the \trento\ multiplicity values we now knew how many background particles to create for each \trento\ event. To generate values of transverse momentum ($p_T$), pseudo-rapidity ($\eta$), and azimuthal angle ($\phi$) for each particle we used the numpy random number generator. For $\phi$  and $\eta$ we created flat distributions between -$\pi$ to $\pi$ and -2 to 2, and for $p_T$ we sampled from a Gaussian deviate, which is equivalent to a thermal Boltzmann distribution. We also included radial and elliptic flow into our background distributions by using the $\epsilon_2$ variable from the \trento\ data. First we calculated the initial transverse rapidity ($y_T$) and then applied flow as an additive boost. 
 \[y_{Boost} = \rho \times \rho_0 + \rho_2 \times \epsilon_2 \times cos(2\phi)\]
-The scaling parameter for radial flow ($\rho_0$) that we used was 0.85 from Retiere and Lisa, PRC70.044907 (2004), table 2.  The scaling parameter for elliptic flow ($\rho_2$) was 0.15 from Alver and Roland, PRC81,054905 (2010), fig 4. Again using the numpy random number generator we created a normalized radial distance ($\rho$). After applying flow, $y_T$ was converted back to $p_T$. The mass used for these calculations was chosen randomly from one of nine different particles that were included in the produced background. These particles consisted of pions, kaons, protons, and neutrons, as well as their anti particle counterparts. Figure 3 shows the background display produced from \trento\ events. Again each particle that is produced is binned in a 2 dimensional histogram depending on its ($\eta$) and ($\phi$). For this plot the histogram bins are weighted by $p_T$. There are no jets produced within the \trento\ background.
+The scaling parameter for radial flow ($\rho_0$) that we used was 0.85 from Retiere and Lisa, PRC70.044907 (2004), table 2.  The scaling parameter for elliptic flow ($\rho_2$) was 0.15 from Alver and Roland, PRC81,054905 (2010), fig 4. Again using the numpy random number generator we created a normalized radial distance ($\rho$). After applying flow, $y_T$ was converted back to $p_T$. The mass used for these calculations was chosen randomly from one of nine different particles that were included in the produced background. These particles consisted of pions, kaons, protons, and neutrons, as well as their anti particle counterparts. Figure 4 shows the background display produced from \trento\ events. Again each particle that is produced is binned in a 2 dimensional histogram in ($\eta$,$\phi$) space. For this plot the histogram bins are weighted by $p_T$. There are no jets produced within the \trento\ background.
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=0.8\textwidth]{phenix_trento_comp.pdf}
+\label{fig_label}
+\caption{Fit of \trento\ data to PHENIX data. Figure created with [python phenix\_trento\_comp.py]}
+\end{center}
+\end{figure}
 
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.49\textwidth]{2d_hist_trento.png}
 \includegraphics[width=0.49\textwidth]{2d_hist_trento2.png}
 \label{fig_label}
-\caption{Trento event display (no jets). High multiplicity is shown on the right and lower multiplicity on the left. Both plots created with [python 2d\_hist\_trento.py -b 30]}
+\caption{\trento\ event display (no jets). High multiplicity is shown on the right and lower multiplicity on the left. Both plots created with [python 2d\_hist\_trento.py -b 30]}
 \end{center}
 \end{figure}
 
@@ -140,6 +160,15 @@ To study jets and explore the different parameters of SlowJet we first focused o
 Our next focus was on the fragmentation function value ($\xi$) for particles within both SlowJet jets and true jets. To calculate $\xi$ we used the following formula:
 \[\xi = ln((\vec{p_{jet}} \cdot \vec{p_{jet}})/(\vec{p_{jet}} \cdot \vec{p_{prt}}))\]
 In figure 6, $\xi$ is calculated for both QCD and QED events with no \trento\ data on the left and with \trento\ data on the right. $\xi$ is calculated for SlowJet jets with radius set at 0.3, 0.5, and 0.7 in all four plots. In the plots it is noticeable that as radius is decreased the peak of $\xi$ values for reconstructed jets is reduced. This occurs because particles with higher $\xi$ values are farther away from the center of the jet cone. As radius is decreased particles on the edge of the jet cone are no longer included in the reconstructed jets. True jets consist of all particles that are ancestors of the initial hard scattering in each Pythia event. These particles were identified by tracing the daughters of each particle starting with the two initial particles that participated in the hard process and ending when only final state particles remain.
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=0.49\textwidth]{optimize_slowjet1.pdf}
+\includegraphics[width=0.49\textwidth]{optimize_slowjet2.pdf}
+\label{fig_label}
+\caption{. Both plots created with [python optimize\_slowjet.py]}
+\end{center}
+\end{figure}
 
 \begin{figure}[h]
 \begin{center}
