added ron's edits

--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -44,18 +44,18 @@ We present results applying the Pythia SlowJet Finder to Pythia generated QCD an
 \section{Introduction}
 \subsection*{Motivation}
 
-The study of jet-quenching in heavy ion collisions, how jets lose energy as they evolve within the quark-gluon plasma (QGP) is one of the most important topics remaining in the quest to understand the detailed properties of the QGP.  However, the task of reconstructing jets within a high multiplicity heavy ion background can be difficult.  Fluctuations in the background can be falsely reconstructed as jets, and true jets that lose energy in the plasma can easily be buried within the backgrounds.  The purpose of this study is to develop a set of simple tools to study jets within an environment that simulates the basic elements of a heavy ion background with thermal particle production and radial and elliptic flow, and then to use these tools to create visual images of the jets and quantitative distributions of jet properties in a fluctuating heavy ion background.  For this study, it is assumed that the identity, mass, and momenta of all produced particles are precisely known.  We do not attempt to include any detector effects.
+The study of jet-quenching in heavy ion collisions, how jets lose energy as they evolve within the quark-gluon plasma (QGP) is one of the most important topics remaining in the quest to understand the detailed properties of the QGP.  However, the task of reconstructing jets within a high multiplicity heavy ion background can be difficult.  Fluctuations in the background can be falsely reconstructed as jets, and true jets that lose energy in the plasma can easily be buried within the backgrounds.  The purpose of this study is to develop a set of simple tools to study jets within an environment that simulates the basic elements of a heavy ion background with thermal particle production and radial and elliptic flow, and then to use these tools to create visual images of the jets and quantitative distributions of jet properties in a fluctuating heavy ion background.  For this study, it is assumed that the identity, mass, and momenta of all produced particles are precisely known.  We do not attempt to include any detector effects in our simulation.
 
 \subsection*{Software Framework}
 
-For this study we work with the Pythia 8.219 Python package, which can be called from Python 2.7.  We use the SlowJet routines that are included in the Pythia installation.  SlowJet provides an {\it anti-k$T$} jet-finding algorithm that produces identical results to FastJet, but does not run as quickly.  Most of the analysis is done using numpy and matplotlib.pyplot packages.  The \trento\ version 1.3 code is run as a stand-alone program.  \trento\ outputs are saved to text files and read from Python scripts, although it is also possible for it to be called directly from within Python.  Unless stated otherwise, all \trento\ backgrounds are for minimum bias distributions.  Additional details on using these packages are given in the descriptions below.
+For this study we work with the Pythia 8.219 Python package, which can be called from Python 2.7.  We use the SlowJet routines that are included in the Pythia installation.  SlowJet provides an {\it anti-k$T$} jet-finding algorithm that produces identical results to FastJet, but does not run as quickly.  Most of the analysis is done using numpy and matplotlib.pyplot packages.  We use \trento\ version 1.3 code to create heavy ion backgrounds. The \trento\ code is run as a stand-alone program.  \trento\ outputs are saved to text files and read from Python scripts, although it is also possible for it to be called directly from within Python.  Unless stated otherwise, all \trento\ backgrounds are for minimum bias distributions.  Additional details on using these packages are given in the descriptions below.
 
 \section{Running Pythia}
 %
 %Describe pythia settings, show lego plot of jet events, for QCD and QED
 %Show distribution of jet pT distributions for QCD and QED
 %
-Pythia allows users to set the beam center-of-mass energy ($E_{CM}$). By default Pythia sets $E_{CM}$ to 14 TeV, the default for all our programs is 200 GeV.  Initial QCD or QED hard scattering processes may be turned on or off. Pythia also allows restrictions to be set on the transverse momentum produced by hard scattering ($p_{THat}$ or jet $p_T$). For our programs the jet $p_T$ range is typically 20-25 GeV. Figure 1 shows the distribution of jet $p_T$ for both various QCD and various QED processes restricted to the range of 20-50 GeV. The upper histogram of figure 1 shows the four most common QCD hard processes produced by Pythia. The different processes are shown in the legend. Gluons are represented by "g", quarks (uds) are represented by "q", and anti-quarks (uds) are represented by "q(bar)." There are also other hard processes, such as those that involve heavy quarks, but they occur so infrequently that they are not included. The lower histogram shows all five of the QED hard processes, however only two of the processes occur frequently. For these processes photons are represented by "gamma," and fermions participating in electroweak interactions are represented by "f" and "f(bar)."
+Pythia allows users to set the beam center-of-mass energy ($E_{CM}$). By default Pythia sets $E_{CM}$ to 14 TeV, the default for all our programs is 200 GeV.  Initial QCD or QED hard scattering processes may be turned on or off. Pythia also allows restrictions to be set on the transverse momentum produced by hard scattering ($p_{THat}$ or jet $p_T$). For our programs the jet $p_T$ range is typically 20-25 GeV. Figure 1 shows the distribution of jet $p_T$ for various QCD and QED processes restricted to the range of 20-50 GeV. The upper histogram of figure 1 shows the four most common QCD hard processes produced by Pythia. The different processes are shown in the legend. Gluons are represented by "g", quarks (uds) are represented by "q", and anti-quarks (uds) are represented by "q(bar)." There are also other hard processes, such as those that involve heavy quarks, but they occur so infrequently that they are not included. The lower histogram shows all five of the QED hard processes, however only two of the processes occur frequently. For these processes photons are represented by "gamma," and fermions participating in electroweak interactions are represented by "f" and "f(bar)."
 
 Figure 2 shows two lego plots, one for a QCD event and one for a QED event. These plots demonstrate how our programs are able to display each Pythia event. Each particle that is produced from a Pythia event is binned in a 2 dimensional histogram depending on its pseudo-rapidity ($\eta$) and azimuthal angle ($\phi$). The histogram bins are weighted by transverse energy ($E_T$). In both plots it is easy to identify the jets produced by the Pythia events. For the QED plot it is important to note that one of the jets is produced by only a single photon. 
 
