--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -84,37 +84,35 @@ Figure 2 shows two lego plots, one for a QCD event and one for a QED event. Thes
 % Explain we add radial flow and elliptic flow from epsilon_2 variable.
 %
 \trento\ allows users to input several physical options in order to create realistic heavy ion collision backgrounds. These options include two projectiles, number of events, reduced-thickness, fluctuation, nucleon-width, cross-section, and a normalization factor. For each data set,  we used non-deformed gold (Au) nuclei with 197 nucleons each. We produced 100,000 events for several different cross-sections. All other physical options were left to their default settings: reduced-thickness = 0, fluctuation = 1, nucleon-width = 0.5 fm, and normalization = 1. Different cross-sections correspond to different beam $E_{CM}$ per nucleon pair. The cross-sections (in units of fm$^2$) that we used to simulate the different beam energies are shown in table 1. \trento\ reads in the options and produces a text file listing several event properties for each event: event number, impact parameter, number of participants, initial entropy, and properties of flow. The produced \trento\ text files were then imported into our programs as an array of event data.
-
 \begin{center}
 \begin{table}
 \centering
-\caption{Cross sections as a function of $\sqrt{s_{nn}}$}
-\begin{tabular}{|c|l|}
+\caption{Cross Sections and Scaling Constants}
+\begin{tabular}{|c|l|l|}
 \hline
-$E_{CM}$(GeV)& $\sigma_{nn}$(fm$^2$) \\
+$E_{CM}$(GeV) & $\sigma_{nn}$(fm$^2$) & Scaling Constant \\
 \hline
-200 & 4.23 \\
+200 & 4.23 & 4.65905256 \\
 \hline
-130 & 3.96 \\
+130 & 3.96 & 3.96639009 \\
 \hline
-62.4 & 3.60 \\
+62.4 & 3.60 & 3.13381932 \\
 \hline
-39 & 3.43 \\
+39 & 3.43 & 2.54804101 \\
 \hline
-27 & 3.32 \\
+27 & 3.32 & 2.16041632 \\
 \hline
-19.6 & 3.25 \\
+19.6 & 3.25 & 1.95015905 \\
 \hline
-15.0 & 3.20 \\
+15.0 & 3.20 & 1.6460897 \\
 \hline
-7.7 & 3.12 \\
+7.7 & 3.12 & 1.27382896 \\
 \hline
 \end{tabular}
-\label{}
 \end{table}
 \end{center}
 
-To use the \trento\ data as we intended we had to produce accurate Au-Au multiplicities for the various beam energies. To do this we fit the \trento\ data to PHENIX data. We created a histogram for the number of participants in each \trento\ event and weighted the bins by the initial entropy. We then scaled the \trento\ data at each energy by a constant to fit it to the PHENIX data of charged multiplicity vs. number of participants. The fit and the produced plot is shown in figure 3. The \trento\ data points are the open shapes that are connected by lines. Using the constants from the fit at each energy allowed us to create multiplicity values from the initial entropy values. The constant for the 200 GeV data was 4.65905256.
+To use the \trento\ data as we intended we had to produce accurate Au-Au multiplicities for the various beam energies. To do this we fit the \trento\ data to PHENIX data as shown in figure 3. We created a histogram for the number of participants in each \trento\ event and weighted the bins by the initial entropy. We then scaled the \trento\ data at each energy by a constant to fit it to the PHENIX data of charged multiplicity vs. number of participants. The \trento\ data points are the open shapes that and are connected by lines. Using the scaling constants from the fit at each energy allowed us to create multiplicity values from the initial entropy values. The scaling constants are that we used are shown in table 1.
 
 Using the \trento\ multiplicity values we now knew how many background particles to create for each \trento\ event. To generate values of transverse momentum ($p_T$), pseudo-rapidity ($\eta$), and azimuthal angle ($\phi$) for each particle we used the numpy random number generator. For $\phi$  and $\eta$ we created flat distributions between -$\pi$ to $\pi$ and -2 to 2, and for $p_T$ we sampled from a Gaussian deviate, which is equivalent to a thermal Boltzmann distribution. We also included radial and elliptic flow into our background distributions by using the $\epsilon_2$ variable from the \trento\ data. First we calculated the initial transverse rapidity ($y_T$) and then applied flow as an additive boost. 
 \[y_{Boost} = \rho \times \rho_0 + \rho_2 \times \epsilon_2 \times cos(2\phi)\]
