began renaming images

--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -61,18 +61,18 @@ Figure 2 shows two lego plots, one for a QCD event and one for a QED event. Thes
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.8\textwidth]{pT_pythiaEvents.pdf}
+\includegraphics[width=0.8\textwidth]{pythia_pT_process.pdf}
 \label{fig_label}
-\caption{Distribution of jet pT for QCD and QED processes for 20,000 events.  Figure created with [python pT\_pythiaEvents.py -m 20000]}
+\caption{Distribution of jet pT for QCD and QED processes for 20,000 events.  Figure created with [python pythia\_pT\_process.py -m 20000]}
 \end{center}
 \end{figure}
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.49\textwidth]{2d_hist_jetplot.png}
-\includegraphics[width=0.49\textwidth]{2d_hist_jetplot2.png}
+\includegraphics[width=0.49\textwidth]{2d_pythia_slowjet1.png}
+\includegraphics[width=0.49\textwidth]{2d_pythia_slowjet2.png}
 \label{fig_label}
-\caption{Pythia event display for a QCD event, shown to the left, and a QED event shown to the right.  Left figure created with [python 2d\_hist\_jetplot\_wcol.py -o -b 30]. Right figure created with [python 2d\_hist\_jetplot\_wcol.py -o -c -q -b 30]}
+\caption{Pythia event display for a QCD event, shown to the left, and a QED event shown to the right.  Left figure created with [python 2d\_pythia\_slowjet.py -o -b 30]. Right figure created with [python 2d\_pythia\_slowjet.py -o -c -q -b 30]}
 \end{center}
 \end{figure}
 
